# nom-stream-parser

./: Cargo.toml  Readme.md
bench-macros/: Cargo.toml
bench-macros/src/: bench_configuration.rs  lib.rs
bench-macros/src/bench_iterator/: configuration.rs  mod.rs
bench-macros/src/bench_reader/: configuration.rs  mod.rs
benches/: stream.rs  stream_iterator.rs  stream_reader.rs
examples/: async_stream_parser_iterator_heuristic_optimised.rs  async_stream_parser_reader_heuristic_optimised.rs  stream_parser_iterator.rs  stream_parser_iterator_heuristic_optimised.rs  stream_parser_reader.rs  stream_parser_reader_heuristic_optimised.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: stream.rs  stream_iterator.rs  stream_reader.rs
fuzz/src/: lib.rs
src/: builder.rs  errors.rs  heuristic.rs  lib.rs  logic.rs  parser_state.rs  search_group.rs  traits.rs  utils.rs
src/buffers/: dynamic.rs  mod.rs  preallocated.rs
src/stream_parsers/: async_iterator.rs  async_reader.rs  mod.rs  sync_iterator.rs  sync_reader.rs
tests/: seeded_tests_stream.rs  seeded_tests_stream_iterator.rs  seeded_tests_stream_reader.rs  unit_tests.rs
utils/: Cargo.toml
utils/src/: lib.rs  parsers.rs  seeder.rs  source.rs
