workspace = { members = ["utils", "bench-macros", "fuzz"] }
[package]
name = "nom-stream-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
nom = "7.1.3"
thiserror = "1.0.57"
tracing = "0.1.40"
derive_builder = { version = "0.20.0", optional = true }
bytes = "1.5.0"

[dev-dependencies]
bench-macros = { path = "bench-macros" }
criterion = { version = "0.5.1" }
rand_chacha = "0.3.1"
rand = "0.8.5"
test-pretty-log = "0.6.2"
utils = { path = "utils" }

[[bench]]
name = "stream_iterator"
harness = false

[[bench]]
name = "stream_reader"
harness = false

[features]
default = ["builder"]
builder = ["derive_builder"]
