[package]
name = "bench-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.49"
syn-helpers = "0.4.5"
quote = "1.0.35"
quote2 = "0.7.0"
proc-macro2 = "1.0.78"
