[package]
name = "playground-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand_chacha = "0.3.1"
rand = "0.8.5"

[dependencies.nom-stream-parser]
path = ".."

[dependencies.utils]
path = "../utils"

[[bin]]
name = "stream_iterator"
path = "fuzz_targets/stream_iterator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stream_reader"
path = "fuzz_targets/stream_reader.rs"
test = false
doc = false
bench = false
